# project-chimera

./: main.py  pyproject.toml
research/: architecture_strategy.md
