[project]
name = "project-chimera"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coinbase-agentkit>=0.7.4",
    "mcp>=1.26.0",
    "pydantic-ai>=1.54.0",
    "pytest>=9.0.2",
    "redis>=7.1.0",
    "ruff>=0.15.0",
    "weaviate-client>=4.19.2",
]
